--- a/riders.html
+++ b/riders.html
@@ -6,6 +6,8 @@
   {{> navbar}}
   <div class="page-container">
     {{> map}}
+    {{> summary}}
+    {{> detailScreen}}
   </div>
 </body>
 
@@ -32,6 +34,28 @@
     <div id="map" class="full-page"></div>
   </div>
   <div id="detail-screen" class="full-page hide">
+  </div>
+</template>
+
+<template name="summary">
+  <div id="summary" class="summary-bar">
+    <div class="flexbox full-page">
+      <div class="flexbox-item">
+        <h1>Name of Town</h1>
+        <h3>30 kilometers</h3>
+        <h3>65 People</h3>
+      </div>
+      <div class="summary-side flexbox-item text-center vertical-center text-urgent">
+        <h2>4</h2>
+        <h4>Urgent</h4>
+      </div>
+    </div>
+  </div>
+</template>
+
+<template name="detailScreen">
+  <div id="detail-screen" class="full-page screen out-right">
+    <h1>Name of Town</h1>
   </div>
 </template>
 
