Sliding from right works

--- a/riders.html
+++ b/riders.html
@@ -30,10 +30,8 @@
 </template>
 
 <template name="map">
-  <div id="map-screen" class="full-page">
+  <div id="map-screen" class="full-page screen">
     <div id="map" class="full-page"></div>
-  </div>
-  <div id="detail-screen" class="full-page hide">
   </div>
 </template>
 
