--- a/riders.html
+++ b/riders.html
@@ -13,11 +13,11 @@
     <div class="navbar-inner flexbox text-center full-page">
       <div class="flexbox-item vertical-center">
         <ul class="unstyled nav clearfix">
-          <li><button class="selected">Blood</button></li>
-          <li><button>HIV+</button></li>
-          <li><button>Pregnancy</button></li>
-          <li><button>Immunization</button></li>
-          <li><button>Medicine</button></li>
+          <li><button class="js-filter">Blood</button></li>
+          <li><button class="js-filter">HIV+</button></li>
+          <li><button class="js-filter">Pregnancy</button></li>
+          <li><button class="js-filter">Immunization</button></li>
+          <li><button class="js-filter">Medicine</button></li>
         </ul>
       </div>
     </div>
