--- a/riders.html
+++ b/riders.html
@@ -59,7 +59,7 @@
   <div id="detail-screen" class="full-page screen out-right">
     <div class="full-scroll container">
       <button id="back-button" class="float-right">&laquo; Back</button>
-      <h1 class="text-brand">Name of Town</h1>
+      <h1 class="text-brand">Name of Town <small>PHC</small></h1>
       <hr />
       <div class="town-info clearfix">
         <div class="town-info-item float-left">
