Urgent text is urgent (red)

--- a/riders.html
+++ b/riders.html
@@ -51,7 +51,7 @@
   <h3>{{distance}} kilometers</h3>
   <h3>{{population}} People</h3>
 </div>
-<div class="summary-side flexbox-item text-center vertical-center text-urgent">
+<div class="summary-side flexbox-item text-center vertical-center {{urgent-css}}">
   <h2>{{urgent}}</h2>
   <h4>Urgent</h4>
 </div>
