Updating people numbers

--- a/riders.html
+++ b/riders.html
@@ -58,7 +58,7 @@
 </template>
 
 <template name="detailScreen">
-  <div id="detail-screen" class="full-page screen out-right">
+  <div id="detail-screen" class="full-page screen {{class-show-details}}">
     <div class="full-scroll container">
       <button id="back-button" class="float-right">&laquo; Back</button>
       <h1 class="text-brand">{{townname}} <small>{{community}}</small></h1>
