Remove inputs on disease info

--- a/riders.html
+++ b/riders.html
@@ -124,10 +124,10 @@
         <img src="icons/{{id}}.png" width="30" />
       </div>
       <div class="flexbox-item">
-        <input id="{{id}}" value="{{amount}}" type="text" />
-        <label for="{{id}}">{{label}}</label>
+        <h6>{{amount}}</h6>
+        <label>{{label}}</label>
       </div>
-      <div class="flexbox-item vertical-center">
+      <div class="town-info-button flexbox-item vertical-center">
         <button class="js-add-disease btn-circle btn-blue">+</button>
       </div>
     </div>
