Remove input from population info

--- a/riders.html
+++ b/riders.html
@@ -79,7 +79,7 @@
               <img src="icons/population.png" width="30" />
             </div>
             <div class="flexbox-item">
-              <input id="population" value="{{population}}" type="text" />
+              <h6>{{population}}</h6>
               <label for="population">Inhabitants</label>
             </div>
           </div>
