Add basic html for urgent section

--- a/riders.html
+++ b/riders.html
@@ -72,6 +72,13 @@
       <button id="back-button" class="float-right">&laquo; Back</button>
       <h1 class="text-brand">{{townname}} <small>{{community}}</small></h1>
       <hr />
+      <div class="urgent-section">
+        <h2>Urgent</h2>
+        <ol>
+          <li>Pregnant Woman - Next Week</li>
+        </ol>
+      </div>
+      <hr />
       <div class="town-info clearfix">
         <div class="town-info-item float-left">
           <div class="flexbox">
