Urgent details, this and next, data bindings

--- a/riders.html
+++ b/riders.html
@@ -149,8 +149,9 @@
         <span class="urgent-label label-inner">Urgent This Week</span>
       </h3>
       <ol class="unstyled">
-        <li>3 pregnant women</li>
-        <li>2 HIV+ patients</li>
+        <li>{{urgent "pregnancy" 7}} pregnant women</li>
+        <li>{{urgent "hiv" 7}} HIV+ patients</li>
+        <li>{{urgent "baby" 7}} immunizations needed</li>
       </ol>
     </div>
     <div class="flexbox-item">
@@ -158,8 +159,9 @@
         <span class="label-inner">Next Week</span>
       </h3>
       <ol class="unstyled">
-        <li>2 pregnant women</li>
-        <li>1 HIV+ patients</li>
+        <li>{{urgent "pregnancy" 14}} pregnant women</li>
+        <li>{{urgent "hiv" 14}} HIV+ patients</li>
+        <li>{{urgent "baby" 14}} immunizations needed</li>
       </ol>
     </div>
   </div>
